<resources>
    <string name="app_name">Blueprint</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="accountType">accountType</string>
    <string name="authTokenType">authTokenType</string>
    <string name="isAddingNewAccount">isAddingNewAccount</string>
    <string name="password">password</string>
    <string name="no_share_application">No application found to share.</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="nav_logout">Logout</string>
    <string name="welcome_screen">Welcome screen</string>
    <string name="pets_screen">Pets</string>

    <string name="register">Register</string>
    <string name="forgot_password">Forgot password</string>
    <string name="login">Log in</string>
    <string name="e_mail">e-mail</string>
    <string name="forgot_password_question">Request new password</string>
    <string name="dont_have_an_account">Don\'t have an account ?</string>
    <string name="logoView">logoView</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="sent_reset_link">Sent reset link</string>
    <string name="enter_e_mail">enter e-mail</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log in</string>
    <string name="already_have_account">Already have account ?</string>
    <string name="auth">auth</string>
    <string name="logout">Logout</string>

</resources>
