<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="layoutUtils"
            type="co.netguru.blueprintlibrary.common.utils.DisplayUtils" />

        <variable
            name="viewModel"
            type="co.netguru.blueprint.login.viewmodel.LoginRegisterViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/logoView"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/small"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/logoView"
            android:cropToPadding="true"
            android:scaleType="fitXY"
            android:src="@{layoutUtils.setDrawableWithTint(@drawable/ic_restore,@color/logo_active)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/forgot_your_password"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logoView" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputEmail"
            android:layout_width="300dp"
            android:layout_height="90dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/inputEmailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_e_mail"
                android:inputType="textEmailAddress"
                android:text="@={viewModel.forgotUserName}"
                android:textColor="@color/black" />

        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:id="@+id/sentResetLinkButtonContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputEmail">

            <co.netguru.blueprintlibrary.common.customViews.CircularProgressButton
                android:id="@+id/sentResetLink"
                android:layout_width="@dimen/input_width"
                android:layout_height="@dimen/button_height"
                android:background="@drawable/shape_blue"
                android:enabled="false"
                android:onClick="@{() -> viewModel.startReset()}"
                android:text="@string/sent_reset_link"
                android:textColor="@color/white"
                android:transitionName="transition"
                app:animationBackground="@drawable/rounded_shape_white"
                app:animationTextColor="@color/colorPrimary"
                app:finalCornerAngle="@dimen/large_corner_angle"
                app:initialCornerAngle="@dimen/small_corner_angle"
                app:spinning_bar_color="@color/colorPrimary"
                app:spinning_bar_width="@dimen/spinning_bar_width" />
        </RelativeLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/sign_up"
            style="@style/Borderless_Button"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:onClick="@{() -> viewModel.signUp()}"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/log_in"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sentResetLinkButtonContainer" />

    </android.support.constraint.ConstraintLayout>
</layout>